--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   syncfusion_flutter_calendar: ^23.1.42
+  dio: ^5.3.3
+  file_picker: ^6.0.0
+  syncfusion_flutter_pdfviewer: ^23.1.43
 
 dev_dependencies:
   flutter_test:
