--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   dio: ^5.3.3
   file_picker: ^6.0.0
   syncfusion_flutter_pdfviewer: ^23.1.43
+  awesome_dialog: ^3.1.0
+  flutter_bloc: ^8.1.3
+
 
 dev_dependencies:
   flutter_test:
