--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   syncfusion_flutter_pdfviewer: ^23.1.43
   awesome_dialog: ^3.1.0
   flutter_bloc: ^8.1.3
+  flutter_secure_storage: ^9.0.0
+
 
 
 dev_dependencies:
