--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,7 @@ dependencies:
   awesome_dialog: ^3.1.0
   flutter_bloc: ^8.1.3
   flutter_secure_storage: ^9.0.0
-
+  video_player: ^2.8.1
 
 
 dev_dependencies:
