--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   flutter_bloc: ^8.1.3
   flutter_secure_storage: ^9.0.0
   video_player: ^2.8.1
+  intl: ^0.18.1
+  flutter_rating_bar: ^4.0.1
 
 
 dev_dependencies:
