--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   video_player: ^2.8.1
   intl: ^0.18.1
   flutter_rating_bar: ^4.0.1
+  image_picker: ^1.0.5
 
 
 dev_dependencies:
