--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   intl: ^0.18.1
   flutter_rating_bar: ^4.0.1
   image_picker: ^1.0.5
+  jitsi_meet_flutter_sdk: ^0.1.7
+
 
 
 dev_dependencies:
