--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <application
         tools:replace="android:label"
-        android:label="sample_app"
+        android:label="LET TUTOR"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
